--- a/video/index.html
+++ b/video/index.html
@@ -8,7 +8,7 @@ layout: page
 			<div class="cell">
 				<div class="video_wrapper">
 					<div class="responsive-embed">
-							<video class="featured_video" src="{{site.baseurl}}/videos/microclimate_overview_2.mp4" controls poster="dist/images/video-poster-basic.jpg"></video>
+							<video class="featured_video" src="{{site.baseurl}}/video/TA18_Upgrade_V2_1080.mp4" controls poster="/_assets/video-poster-basic.jpg"></video>
 					</div>
 				</div>
 			</div>
@@ -18,13 +18,7 @@ layout: page
 		<div class="grid-container">
 			<div class="grid-x grid-margin-x">
 				<div class="cell small-12 medium-shrink">
-					<a href="#" data-video="{{site.baseurl}}/videos/think-beta.mp4" class='showVideo'><img src="dist/images/icon-video.svg" alt="Think beta video" /> Import and devops pipeline (4:47)</a> 
-				</div>
-				<div class="cell small-12 medium-shrink">
-					<a href="#" data-video="{{site.baseurl}}/videos/Microclimate_Install.mp4"  class='showVideo'><img src="dist/images/icon-video.svg" alt="Microclimate install video" /> Install Microclimate (2:51)</a>
-				</div>
-				<div class="cell small-12 medium-shrink">
-					<a href="#" data-video="{{site.baseurl}}/videos/Microclimate-Create.mp4"  class='showVideo'><img src="dist/images/icon-video.svg" alt="Microclimate create video" /> Project creation, logs and monitoring (5:24)</a>
+					<a href="#" data-video="{{site.baseurl}}/video/xxxxx.mp4" class='showVideo'><img src="/_assets/icon-video.svg" alt="MQ Beta Video" /> TA 1.8 MQ Beta </a> 
 				</div>
 			</div>
 		</div>
