--- a/video/index.html
+++ b/video/index.html
@@ -1,29 +1,4 @@
 ---
 layout: page
 ---
-
-<section class="videos">
-	<div class="grid-container">
-		<div class="grid-x">
-			<div class="cell">
-				<div class="video_wrapper">
-					<div class="responsive-embed">
-							<video class="featured_video" src="{{site.baseurl}}/video/TA18_Upgrade_V2_1080.mp4" controls poster="/_assets/video-poster-basic.jpg"></video>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<div class="videos_to_watch">
-		<div class="grid-container">
-			<div class="grid-x grid-margin-x">
-				<div class="cell small-12 medium-shrink">
-					<a href="#" data-video="{{site.baseurl}}/video/xxxxx.mp4" class='showVideo'><img src="/_assets/icon-video.svg" alt="MQ Beta Video" /> TA 1.8 MQ Beta </a> 
-				</div>
-			</div>
-		</div>
-	</div>
-</section>
-
-<main>
-</main>
+{% youtube oHg5SJYRHA0 560 420 %}
