--- a/video/index.html
+++ b/video/index.html
@@ -1,11 +1,9 @@
 ---
 layout: page
 ---
-<br />
 
-<div class="youtube" id="8wfY9kYVjnE"></div>
+{% youtube 8wfY9kYVjnE 480 360 %}
 
-<br />
 
 <!--more-->
-Great video
+bad video
