--- a/video/index.html
+++ b/video/index.html
@@ -1,9 +1,6 @@
 ---
 layout: page
 ---
-
-{% youtube 8wfY9kYVjnE 480 360 %}
-
-
+{% include youtubePlayer.html id=8wfY9kYVjnE %}
 <!--more-->
-bad video
+Nice video
