--- a/video/index.html
+++ b/video/index.html
@@ -1,6 +1,7 @@
 ---
 layout: page
+youtubeId: 8wfY9kYVjnE
 ---
-{% include youtubePlayer.html id=8wfY9kYVjnE %}
+{% include youtubePlayer.html id=page.youtubeId %}
 <!--more-->
 Nice video
