--- a/video/index.html
+++ b/video/index.html
@@ -1,7 +1,17 @@
 ---
 layout: page
-youtubeId: 8wfY9kYVjnE
+youtubeId_UP:-JNXUBPUlTg
+youtubeId_MQ:us-G57BnDPE
+youtubeId_E2E:lzFI4e3Ed68
 ---
-{% include youtubePlayer.html id=page.youtubeId %}
-<!--more-->
-Nice video
+
+{% include youtubePlayer.html id=page.youtubeId_E2E %}
+See how you can use Transformation Advisor to migrate an application from on-prem to IBM Cloud Private.
+
+
+{% include youtubePlayer.html id=page.youtubeId_MQ %}
+Transformation Advisor v1.8 has a Beta MQ queue manager scanning feature. Watsh the video to see how you can use it.
+
+
+{% include youtubePlayer.html id=page.youtubeId_UP %}
+Upgrading to v1.8 requires you to create a secret for the first time - see how to do it in this video
