--- a/video/index.html
+++ b/video/index.html
@@ -4,7 +4,7 @@ youtubeId: us-G57BnDPE
 ---
 
 {% include youtubePlayer.html id=page.youtubeId %}
-See how you can use Transformation Advisor to migrate an application from on-prem to IBM Cloud Private.
+See  you can use Transformation Advisor to migrate an application from on-prem to IBM Cloud Private.
 
 
 {% include youtubePlayer.html id=page.youtubeId %}
