--- a/video/index.html
+++ b/video/index.html
@@ -1,15 +1,24 @@
 ---
 layout: page
-youtubeId: us-G57BnDPE
+youtubeId_MQ: us-G57BnDPE
+youtubeId_UP: lzFI4e3Ed68
+youtubeId_E2E: -JNXUBPUlTg
 ---
 
-{% include youtubePlayer.html id=page.youtubeId %}
-See  you can use Transformation Advisor to migrate an application from on-prem to IBM Cloud Private.
+{% include youtubePlayer.html id=page.youtubeId_E2E %}
+See you can use Transformation Advisor to migrate an application from on-prem to IBM Cloud Private.
+<br>
+</br>
 
 
-{% include youtubePlayer.html id=page.youtubeId %}
+
+{% include youtubePlayer.html id=page.youtubeId_MQ %}
 Transformation Advisor v1.8 has a Beta MQ queue manager scanning feature. Watsh the video to see how you can use it.
 
 
-{% include youtubePlayer.html id=page.youtubeId %}
+
+
+{% include youtubePlayer.html id=page.youtubeId_UP %}
 Upgrading to v1.8 requires you to create a secret for the first time - see how to do it in this video
+
+
