--- a/video/index.html
+++ b/video/index.html
@@ -3,7 +3,27 @@ layout: page
 youtubeId_MQ: us-G57BnDPE
 youtubeId_E2E: lzFI4e3Ed68
 youtubeId_UP: -JNXUBPUlTg
+youtubeId_IN: TstwQlRSIGU
+youtubeId_EX: Q_74TQ32vJs
+youtubeId_SL: Ezar_BCua-Y
+youtubeId_MQ2: z2hJBXhpKlo
 ---
+{% include youtubePlayer.html id=page.youtubeId_IN %}
+Video showing installation of TA 1.9.0 into a non-default namespace on ICP 3.1.1
+<br>
+</br>
+{% include youtubePlayer.html id=page.youtubeId_MQ2 %}
+Transformation Advisor v 1.9.0 introduces new IBM MQ capability to scan Queue Managers.
+<br>
+</br>
+{% include youtubePlayer.html id=page.youtubeId_SL %}
+Transformation Advisor v 1.9.0 now includes the ability to detect and analyze your WAS shared libraries without you needing to do a thing.
+<br>
+</br>
+{% include youtubePlayer.html id=page.youtubeId_EX %}
+IBM Cloud Transformation Advisor v1.9.0 now allows you to export your results in PDF/CSV format. See how.
+<br>
+</br>
 {% include youtubePlayer.html id=page.youtubeId_E2E %}
 See how you can use Transformation Advisor to migrate an application from on-prem to IBM Cloud Private.
 <br>
